# factory_management_system/app/routes/customer.py
@@ -4,14 +4,17 @@ from app.models import db, Customer
 bp = Blueprint('customer', __name__)
 
 @bp.route('/customers', methods=['POST'])
+@limiter.limit("10 per minute")
 def create_customer():
+    """Create a new customer."""
     data = request.json
-    customer = Customer(name=data['name'], email=data['email'], phone=data['phone'])
-    db.session.add(customer)
+    new_customer = Customer(name=data['name'], email=data['email'], phone=data['phone'])
+    db.session.add(new_customer)
     db.session.commit()
-    return jsonify({'id': customer.id, 'name': customer.name, 'email': customer.email, 'phone': customer.phone}), 201
+    return jsonify({'id': new_customer.id, 'name': new_customer.name, 'email': new_customer.email, 'phone': new_customer.phone}), 201
 
 @bp.route('/customers', methods=['GET'])
 def get_customers():
+    """Get all customers."""
     customers = Customer.query.all()
     return jsonify([{'id': cust.id, 'name': cust.name, 'email': cust.email, 'phone': cust.phone} for cust in customers]), 200
