# factory_management_system/app/routes/employee.py
@@ -4,14 +4,17 @@ from app.models import db, Employee
 bp = Blueprint('employee', __name__)
 
 @bp.route('/employees', methods=['POST'])
+@limiter.limit("10 per minute")
 def create_employee():
+    """Create a new employee."""
     data = request.json
-    employee = Employee(name=data['name'], position=data['position'])
-    db.session.add(employee)
+    new_employee = Employee(name=data['name'], position=data['position'])
+    db.session.add(new_employee)
     db.session.commit()
-    return jsonify({'id': employee.id, 'name': employee.name, 'position': employee.position}), 201
+    return jsonify({'id': new_employee.id, 'name': new_employee.name, 'position': new_employee.position}), 201
 
 @bp.route('/employees', methods=['GET'])
 def get_employees():
+    """Get all employees."""
     employees = Employee.query.all()
     return jsonify([{'id': emp.id, 'name': emp.name, 'position': emp.position} for emp in employees]), 200
