# factory_management_system/app/routes/production.py
@@ -4,14 +4,17 @@ from app.models import db, Production
 bp = Blueprint('production', __name__)
 
 @bp.route('/production', methods=['POST'])
+@limiter.limit("10 per minute")
 def create_production():
+    """Record a new production."""
     data = request.json
-    production = Production(product_id=data['product_id'], quantity_produced=data['quantity_produced'], date_produced=data['date_produced'])
-    db.session.add(production)
+    new_production = Production(product_id=data['product_id'], quantity_produced=data['quantity_produced'], date_produced=data['date_produced'])
+    db.session.add(new_production)
     db.session.commit()
-    return jsonify({'id': production.id, 'product_id': production.product_id, 'quantity_produced': production.quantity_produced, 'date_produced': production.date_produced}), 201
+    return jsonify({'id': new_production.id}), 201
 
 @bp.route('/production', methods=['GET'])
 def get_production():
-    production_records = Production.query.all()
-    return jsonify([{'id': prod.id, 'product_id': prod.product_id, 'quantity_produced': prod.quantity_produced, 'date_produced': prod.date_produced} for prod in production_records]), 200
+    """Get all production records."""
+    productions = Production.query.all()
+    return jsonify([{'id': prod.id, 'product_id': prod.product_id, 'quantity_produced': prod.quantity_produced, 'date_produced': prod.date_produced.isoformat()} for prod in productions]), 200
